src/scss/variables/_colors.scss
$themes: ("light", "dark");
$colors: (
    #{null}: (
            cyan: #407bff,
            cyan30: #407bff30,
            grey: #dedede,
            white: #ffffff,
            primary: (
                var(--clr--cyan),
                #0a1836,
            ),
            bg: (
                #f2f2f2,
                #212121,
            ),
            title: (
                var(--clr--cyan),
                var(--clr--white),
            ),
        ),
    f: (
        1: #4d4d4d,
        2: (
            var(--clr-f-1),
            var(--clr--white),
        ),
    ),
    btn: (
        grey: #b8b8b8,
        blue: #4668c0,
    ),
    crd: (
        black: #263238,
        cyan: #4e78cc,
        green: #33bd41,
        red: #c53f3f,
        purple: #7e57c2,
        yellow: #ffc100,
    ),
    sm: (
        facebook: #3b5998,
        instagram: #e95950,
        linkedin: #007bb5,
        github: (
            #212121,
            var(--clr--white),
        ),
    )
);
//creating css variables
:root {
    @each $group, $content in $colors {
        @each $color, $hex in $content {
            @if (length($hex) == 1) {
                --clr-#{$group}-#{"" + $color}: #{$hex};
            }
            @if (length($hex) == 2) {
                --clr-#{$group}-#{"" + $color}: #{nth($hex, 1)};
            }
        }
    }
}
body.#{nth($themes,2)} {
    @each $group, $content in $colors {
        @each $color, $hex in $content {
            @if (length($hex) == 2) {
                --clr-#{$group}-#{"" + $color}: #{nth($hex, 2)};
            }
        }
    }
}

